@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.955 2008-11-17 02:32:24 castaglia Exp $
+$Id: NEWS,v 1.956 2008-11-19 18:07:18 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -29,6 +29,7 @@ CVS
 - Bug 3131 - Session process uses 100% CPU after aborted transfer.
 - Bug 3132 - Handling of SIGABRT signal leads to endless loop.
 - Bug 3073 - Command arguments not decoded properly in some places.
+- Bug 3135 - Aborting a download can lead to segfault in some cases.
 
 1.3.2rc2 - Released 17-Sep-2008
 --------------------------------
